Diseños basicos arreglados, incluido logo en el header, version-0.0.2

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
     "sass": "^1.85.0"
-  }
+  },
+  "scripts": {
+  "watch-scss": "sass --watch scss/main.scss css/main.css"
+}
 }
