añadiendo la primera parte de backend, integrando la db con informacion fictisia, arreglando portfolio.jsx version 0.0.3

--- a/backend-php/composer.json
+++ b/backend-php/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Usuario\\Backend\\": "src/"
+            "App\\": "src/"
         }
     },
     "authors": [
@@ -13,6 +13,8 @@
             "email": "luis.futuro.01@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "altorouter/altorouter": "^2.0"
+    }
 }
 
